sandbox/output
FizzBuzzHandler.java:1: error: '{' expected
public class FizzBuzzHandler implement Handler {
                            ^
1 error
